src/test/ui/use/use-keyword.stderr
error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/use-keyword.rs:6:13
   |
LL |         use self as A;
   |             ^^^^^^^^^

error[E0432]: unresolved import `super`
  --> $DIR/use-keyword.rs:8:13
   |
LL |         use super as B;
   |             ^^^^^^^^^^ no `super` in the root

error[E0432]: unresolved import `super`
  --> $DIR/use-keyword.rs:11:21
   |
LL |         use super::{self as C};
   |                     ^^^^^^^^^ no `super` in the root

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0429, E0432.
For more information about an error, try `rustc --explain E0429`.
